syntax = "proto3";

package user.v1;
import "google/protobuf/timestamp.proto";

option go_package = "github.com/Duke1616/ecmdb/api/gen/v1;user";

message User {
  // 用户ID
  int64 id = 1;
  // 用户名
  string username  = 2;
  // 飞书用户ID
  string lark_user_id = 3;
  // 企业微信用户ID
  string wechat_user_id = 4;
  // 用户邮箱
  string email = 5;
}

// 查找用户请求
message FindByUsernamesReq{
  repeated string usernames = 1;
}

message FindByDepartmentIdReq {
  int64 department_id = 1;
}

// 批量查找部门用户请求
message FindByDepartmentIdsReq {
  repeated int64 department_ids = 1;
}

// 查找用户请求
message FindByIdsReq {
  repeated int64 ids = 1;
}

// 查找用户响应
message RetrieveUsers {
  repeated User users = 1;
}

// 用户服务定义
service UserService {
  // 查找多个用户名对应的用户信息
  rpc FindByUsernames (FindByUsernamesReq) returns (RetrieveUsers);

  // 通过用户ID查找用户信息
  rpc FindByIds (FindByIdsReq) returns (RetrieveUsers);

  // 通过部门查询用户
  rpc FindByDepartmentId(FindByDepartmentIdReq) returns (RetrieveUsers);

  // 批量通过部门IDs查询用户
  rpc FindByDepartmentIds(FindByDepartmentIdsReq) returns (RetrieveUsers);
}